Backend update
- Now, if we upload the image information from the lucas-image-server, then the backend could handle the request, and fill up the tables with records.